WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279487
Crash in NetworkManager::onGatheredNetworks() under std::sort
https://bugs.webkit.org/show_bug.cgi?id=279487
Summary
Crash in NetworkManager::onGatheredNetworks() under std::sort
Chris Dumez
Reported
2024-09-10 21:12:01 PDT
Crash in NetworkManager::onGatheredNetworks() under std::sort.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-09-10 21:12:09 PDT
<
rdar://133707018
>
Chris Dumez
Comment 2
2024-09-10 21:21:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33441
EWS
Comment 3
2024-09-11 04:09:29 PDT
Committed
283477@main
(82eeb087cdbf): <
https://commits.webkit.org/283477@main
> Reviewed commits have been landed. Closing PR #33441 and removing active labels.
EWS
Comment 4
2024-09-12 21:01:17 PDT
Committed
283286.29@safari-7620-branch
(4067e3fa0bcb): <
https://commits.webkit.org/283286.29@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1756 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug